--- a/package.json
+++ b/package.json
@@ -3,21 +3,54 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@bonfida/spl-name-service": "^2.4.2",
+    "@coral-xyz/anchor": "^0.29.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@ledgerhq/hw-transport-webhid": "^6.28.6",
+    "@mui/material": "^5.15.17",
+    "@project-serum/serum": "^0.13.65",
+    "@solana/web3.js": "^1.91.8",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bip32": "^2.0.5",
+    "bip39": "^3.0.3",
+    "bn.js": "^5.2.1",
+    "bs58": "^5.0.0",
+    "buffer-layout": "^1.2.2",
+    "ed25519-hd-key": "^1.3.0",
+    "immutable-tuple": "^0.4.10",
+    "material-ui-popup-state": "^5.1.0",
+    "mdi-material-ui": "^7.9.1",
+    "notistack": "^3.0.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
+    "react-async-hook": "^4.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "tweetnacl": "^1.0.3",
+    "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy": "git pull --ff-only && yarn && yarn build",
+    "deploy": "gh-pages -d build",
+    "fix": "run-s fix:*",
+    "fix:prettier": "prettier \"src/**/*.js\" \"extension/src/*.js\" --write",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
+    "build:extension": "yarn build && cp -a ./build/. ./extension/build/ && yarn build:extension-scripts",
+    "build:extension-scripts": "cp -a ./extension/src/. ./extension/build/.",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es6": true,
+      "webextensions": true
+    },
     "extends": [
       "react-app",
       "react-app/jest"
@@ -34,5 +67,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.4.5"
   }
 }
