--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
   },
   "private": true,
   "dependencies": {
+    "@bonfida/spl-name-service": "^2.5.2",
+    "@coral-xyz/anchor": "^0.30.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@ledgerhq/hw-transport-webhid": "^6.28.6",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
+    "@project-serum/serum": "^0.13.65",
     "@solana-developers/preset-react": "2.2.0",
+    "@solana/buffer-layout": "^4.0.1",
     "@solana/spl-token": "0.4.1",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -18,17 +28,34 @@
     "@tabler/icons-react": "2.47.0",
     "@tailwindcss/typography": "0.5.10",
     "@tanstack/react-query": "5.24.1",
+    "@testing-library/user-event": "^14.5.2",
+    "bip32": "^4.0.0",
+    "bip39": "^3.1.0",
+    "bn.js": "^5.2.1",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
     "daisyui": "4.7.2",
+    "ed25519-hd-key": "^1.3.0",
+    "immutable-tuple": "^0.4.10",
     "jotai": "2.6.5",
+    "material-ui-popup-state": "^5.1.1",
+    "mdi-material-ui": "^7.9.1",
+    "notistack": "^3.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
+    "react-async-hook": "^4.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.1",
     "react-router-dom": "6.11.2",
     "stream-browserify": "3.0.0",
-    "tslib": "^2.3.0"
+    "tiny-secp256k1": "^2.2.3",
+    "tslib": "^2.3.0",
+    "tweetnacl": "^1.0.3",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -44,7 +71,8 @@
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/chrome": "^0.0.268",
     "@types/node": "18.14.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
