--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "nx": "17.2.7",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
