--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@project-serum/serum": "^0.13.65",
+    "@project-serum/swap": "^0.1.0-alpha.35",
     "@solana-developers/preset-react": "2.2.0",
     "@solana/buffer-layout": "^4.0.1",
     "@solana/spl-token": "0.4.1",
@@ -23,7 +24,7 @@
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/web3.js": "1.90.0",
+    "@solana/web3.js": "^1.90.0",
     "@swc/helpers": "~0.5.2",
     "@tabler/icons-react": "2.47.0",
     "@tailwindcss/typography": "0.5.10",
